Realigned contact list, corrected NYT Dashboards link

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,15 @@ h1,h2,h3 {
 .col-md-6 {
 	background-color: #FFF;
 }
+.col-centered{
+    float: none;
+    margin: 0 auto;
+    display: inline-block;
+    text-align: left;
+}
+.col-centered li {
+    margin: 5px 0;
+}
 .project {
 	max-width:450px;
 	margin: 0 auto;
@@ -46,7 +55,7 @@ a.anchor {
 	visibility: hidden;
 }
 .bottomFiller{
-	height:300px;
+	height:360px;
 }
 .counter{
 	font-family:"Open Sans","Times New Roman", Times, sans-serif;;
